<resources>
    <string name="app_name">Airplanes</string>
    <string name="action_settings">Settings</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="your_table">Your Table</string>
    <string name="enemy_table">Enemy Table</string>
    <string name="connect">Connect</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>

    <string-array name="numbers">
        <item>Default</item>
        <item>One</item>
        <item>Two</item>
    </string-array>
    <string name="title_activity_connect">Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter">Enter</string>
    <string name="username">Username</string>
    <string name="opponent">Opponent</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="how_to_play">How to play</string>
    <string name="press_again_for_your_stike_to_mark_if_you_hit">Press again for your strike to mark if you \'hit\'</string>
    <string name="for_every_stryke_your_opponent_must_tell_you_if_is_hit_or_miss">For every strike your opponent must tell you if is \'hit\' or \'miss\'</string>
    <string name="in_order_to_win_you_must_guess_the_opponent_airplanes_position_else_you_loose">In order to win you must guess the opponent airplanes position , else you loose</string>
    <string name="you_can_use_up_to_3_airplanes">You can use up to 3 airplanes</string>
    <string name="rules">Rules</string>
    <string name="how_shold_a_plane_look_like">How should a plane look like?</string>
    <string name="boring">Or, if you just get bored , trying to fill all the enemy table it\'s satisfying</string>

</resources>
